--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -15,18 +15,24 @@
 
 
     <application
-        android:name="com.bihe0832.android.app.Application"
-        tools:replace="android:name">
+            android:name="com.bihe0832.android.app.Application"
+            tools:replace="android:name">
 
         <activity
-            android:name="com.bihe0832.android.app.about.AboutActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/AAF.ActivityTheme" />
+                android:name="com.bihe0832.android.app.about.AboutActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AAF.ActivityTheme" />
 
         <activity
-            android:name="com.bihe0832.android.common.tbswebview.WebPageActivity"
-            android:exported="true">
+                android:name="com.bihe0832.android.app.message.AAFMessageActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AAF.ActivityTheme" />
+
+        <activity
+                android:name="com.bihe0832.android.common.tbswebview.WebPageActivity"
+                android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -35,19 +41,28 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:host="*.ptlogin2.qq.com"
-                    android:scheme="https" />
+                        android:host="*.ptlogin2.qq.com"
+                        android:scheme="https" />
 
             </intent-filter>
 
         </activity>
 
         <activity
-            android:name="com.bihe0832.android.app.message.AAFMessageActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/AAF.ActivityTheme" />
+                android:name="com.bihe0832.android.common.webview.WebPageActivity"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                        android:host="*.ptlogin2.qq.com"
+                        android:scheme="https" />
+
+            </intent-filter>
+        </activity>
 
     </application>
 </manifest>
