--- a/CommonWrapper/src/main/AndroidManifest.xml
+++ b/CommonWrapper/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bihe0832.android.common.wrapper"></manifest>
+<manifest package="com.bihe0832.android.common.wrapper" />
 
