加解密，数据压缩，数据分片优化

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ buildscript {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1752/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1753/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1754/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1755/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1756/content/" }
+
     }
 
     dependencies {
@@ -34,6 +39,10 @@ allprojects {
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1752/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1753/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1754/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1755/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1756/content/" }
     }
 
     afterEvaluate { Project subproject ->
