获取没有添加到Window的view的bitmap，优化音频生成视频

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -344,7 +344,7 @@ ext.libmoduleInfo = [
                 "artifactId"         : "lib-view-ext",
                 "apidependenciesList": [
                         project.androidsupport.androidxcore,
-                        "LibAAFResource", "LibText"
+                        "LibAAFResource", "LibText", "LibThread"
                 ]
         ],
         "LibViewPager"              : [
