--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -51,6 +51,9 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-qrcode",
                 "apidependenciesList": [
                         "CommonPhotos"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
                 ]
         ],
         "CommonMessage"         : [
@@ -65,6 +68,9 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-share",
                 "apidependenciesList": [
                         "Framework"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
                 ]
         ],
         "CommonNavigationDrawer": [
@@ -94,6 +100,9 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-ace-editor",
                 "apidependenciesList": [
                         "Framework", "LibAceEditor"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
                 ]
         ],
         "CommonAbout"           : [
@@ -135,12 +144,20 @@ ext.commonmoduleInfo = [
                 "artifactId"             : "common-webview",
                 "apidependenciesList"    : [
                         project.androidsupport.swiperefreshlayout,
-                        "Framework", "LibJsBridge"]
+                        "Framework", "LibJsBridge"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
+                ]
         ],
         "CommonFeedback"        : [
                 "version"                : "6.9.5",
                 "artifactId"             : "common-feedback",
-                "apidependenciesList": ["CommonWebview"]
+                "apidependenciesList": ["CommonWebview"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
+                ]
         ],
         "CommonPraise"          : [
                 "version"            : "6.9.5",
