--- a/dependencies_tbs.gradle
+++ b/dependencies_tbs.gradle
@@ -12,14 +12,22 @@ ext.tbsmoduleInfo = [
     "CommonTBSFeedback": [
         "version"                : "6.9.5",
         "artifactId"             : "common-feedback-tbs",
-        "apidependenciesList": ["CommonTBSWebview", "CommonFeedback"]
+        "apidependenciesList": ["CommonTBSWebview", "CommonFeedback"
+        ],
+        "specialdependenciesList": [
+                "kapt": ["RouterCompiler"]
+        ]
     ],
     "CommonTBSWebview" : [
         "version"                : "6.9.5",
         "artifactId"             : "common-webview-tbs",
         "apidependenciesList"    : [
             project.androidsupport.swiperefreshlayout,
-            "CommonWebview", "CommonTBS"]
+            "CommonWebview", "CommonTBS"
+        ],
+        "specialdependenciesList": [
+                "kapt": ["RouterCompiler"]
+        ]
     ],
     "CommonTBS"        : [
         "version"            : "6.9.3",
