--- a/CommonCrop/src/main/AndroidManifest.xml
+++ b/CommonCrop/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.bihe0832.android.common.crop">
+
     <application>
         <activity
                 android:name="com.bihe0832.android.common.crop.ui.CropActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
-                android:theme="@style/AAF.ActivityTheme.Fullscreen" />
+                android:theme="@style/AAF.ActivityTheme" />
 
     </application>
 </manifest>
