修复BigInt equal 判断的bug、下载二次封装增加下载失败清空下载记录、httpurlconnection 增加重定向的支持，参数传递调整

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -112,7 +112,7 @@ ext.libmoduleInfo = [
                 "version"            : "6.9.19",
                 "artifactId"         : "lib-http-common",
                 "apidependenciesList": [
-                        "LibThread", "LibLog", "LibOS", "LibFile", "LibCommonUtils"
+                        "LibThread", "LibLog", "LibOS", "LibFile", "LibCommonUtils","LibRequest",
                 ]
         ],
         "LibHttpAdvanced"           : [
