修复MessageDigest的线程不安全导致的可能异常

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,11 @@ buildscript {
         maven { url "https://repository.liferay.com/nexus/content/repositories/public/" }
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
-        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1786/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1787/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1788/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1789/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1790/content/" }
+
     }
 
     dependencies {
@@ -33,8 +37,10 @@ allprojects {
         maven { url "https://repository.liferay.com/nexus/content/repositories/public/" }
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url 'https://developer.huawei.com/repo/' }
-        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1786/content/" }
-    }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1787/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1788/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1789/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1790/content/" }    }
 
     afterEvaluate { Project subproject ->
         if (subproject.name == rootProject.name) {
