--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,7 +19,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "Framework"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -42,7 +42,7 @@ ext.isPublish = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "6.9.26"
+ext.moduleVersionName = "6.9.27"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.coremoduleInfo = [
