--- a/dependencies_aaf_config.gradle
+++ b/dependencies_aaf_config.gradle
@@ -1,8 +1,9 @@
 ext {
 
     cmake_version = "3.22.1"
+    gson_version_name = "2.9.0"
     // AAF 基础库依赖的第三方库基本信息
-    gson_version = "com.google.code.gson:gson:2.8.2"
+    gson_version = "com.google.code.gson:gson:$gson_version_name"
     svga_dependency = "com.github.yyued:SVGAPlayer-Android:2.6.1"
 
     kotlinx_coroutines = [
@@ -11,14 +12,14 @@ ext {
     ]
 
     glide = [
-            glide        : "com.github.bumptech.glide:glide:4.13.2",
-            glide_okhttp3: "com.github.bumptech.glide:okhttp3-integration:4.13.2",
-            compiler     : "com.github.bumptech.glide:compiler:4.13.2"
+            glide        : "com.github.bumptech.glide:glide:4.16.0",
+            glide_okhttp3: "com.github.bumptech.glide:okhttp3-integration:4.16.0",
+            compiler     : "com.github.bumptech.glide:compiler:4.16.0"
     ]
 
     tencent = [
             tbssdk: "com.tencent.tbs:tbssdk:44286",
-            mmkv  : "com.tencent:mmkv:1.2.13"
+            mmkv  : "com.tencent:mmkv:1.3.5"
     ]
 
 
@@ -26,7 +27,7 @@ ext {
             okhttp             : "com.squareup.okhttp3:okhttp:3.9.1",
             logging_interceptor: "com.squareup.okhttp3:logging-interceptor:3.8.0",
             retrofit           : "com.squareup.retrofit2:retrofit:2.4.0",
-            converter_gson     : "com.squareup.retrofit2:converter-gson:2.4.0"
+            converter_gson     : "com.squareup.retrofit2:converter-gson:$gson_version_name"
     ]
 
     androidsupport = [
