--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,7 @@ ext.mainProject = "APPTest"
  *
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  **/
-ext.developModule = "Application,LibOkhttpWrapper,LibGson,LibConfig"
+ext.developModule = "Application,LibOkhttpWrapper,LibGson,LibConfig,Router,LibAndroid"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
