okhttpwrapper 移除 gson 转化

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -243,8 +243,7 @@ ext.libmoduleInfo = [
                         "LibLog", "LibHttpCommon",
                         project.okhttp.okhttp,
                         project.okhttp.logging_interceptor,
-                        project.okhttp.retrofit,
-                        project.okhttp.converter_gson
+                        project.okhttp.retrofit
                 ]
         ],
         "LibCoroutines"             : [
