--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,14 +10,14 @@ apply from: rootDir.toString() + '/dependencies_services.gradle'
 /**
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"*/
-ext.mainProject = "APPTest"
+ext.mainProject = "CommonWrapper,CommonTBSWrapper"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  *
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  **/
-ext.developModule = "Application"
+ext.developModule = "LibOkhttpWrapper,LibGson"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -36,7 +36,7 @@ ext.isPublish = false
 
 /**
  * 组件所有模块的最新版本，下次发布时使用*/
-ext.moduleVersionName = "6.10.0"
+ext.moduleVersionName = "6.10.1"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.coremoduleInfo = [
@@ -50,7 +50,10 @@ ext.coremoduleInfo = [
                         "apidependenciesList": ["Application", "CommonDebug", "CommonTBSFeedback"]],
         "Application": ["version"                : "",
                         "artifactId"             : "",
-                        "apidependenciesList"    : ["CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper", "ServicesWrapper"],
+                        "apidependenciesList"    : [
+                                "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper", "ServicesWrapper",
+                                "com.squareup.retrofit2:converter-gson:2.10.0"
+                        ],
                         "specialdependenciesList": ["kapt"               : ["RouterCompiler"],
                                                     "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],]]]
 
