--- a/dependencies_aaf_config.gradle
+++ b/dependencies_aaf_config.gradle
@@ -1,9 +1,8 @@
 ext {
 
     cmake_version = "3.22.1"
-    gson_version_name = "2.9.0"
     // AAF 基础库依赖的第三方库基本信息
-    gson_version = "com.google.code.gson:gson:$gson_version_name"
+    gson_version = "com.google.code.gson:gson:2.10.0"
     svga_dependency = "com.github.yyued:SVGAPlayer-Android:2.6.1"
 
     kotlinx_coroutines = [
@@ -26,8 +25,7 @@ ext {
     okhttp = [
             okhttp             : "com.squareup.okhttp3:okhttp:3.14.9",
             logging_interceptor: "com.squareup.okhttp3:logging-interceptor:3.14.9",
-            retrofit           : "com.squareup.retrofit2:retrofit:2.9.0",
-            converter_gson     : "com.squareup.retrofit2:converter-gson:$gson_version_name"
+            retrofit           : "com.squareup.retrofit2:retrofit:2.9.0"
     ]
 
     androidsupport = [
@@ -59,7 +57,7 @@ ext {
     ]
 
     ffmpeg = [
-            min    : "com.arthenica:mobile-ffmpeg-min:4.4.LTS",
+            min: "com.arthenica:mobile-ffmpeg-min:4.4.LTS",
     ]
 
 
