修复Activity打开路由的bug，优化二维码扫描，bitmap 优化

--- a/LibQRCode/src/main/AndroidManifest.xml
+++ b/LibQRCode/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.bihe0832.android.lib.qrcode">
+<manifest package="com.bihe0832.android.lib.qrcode">
 
 </manifest>
