--- a/CommonQRCode/src/main/AndroidManifest.xml
+++ b/CommonQRCode/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.common.qrcode">
+        package="com.bihe0832.android.common.qrcode">
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application>
         <activity
-            android:name="com.bihe0832.android.common.qrcode.QrcodeScanActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/AAF.ActivityTheme.Fullscreen" />
+                android:name="com.bihe0832.android.common.qrcode.CommonScanActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AAF.ActivityTheme.Fullscreen" />
 
         <activity
-            android:name="com.bihe0832.android.common.qrcode.QrcodeWithResultActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@style/AAF.ActivityTheme.Fullscreen" />
+                android:name="com.bihe0832.android.common.qrcode.CommonWithResultActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/AAF.ActivityTheme.Fullscreen" />
     </application>
 </manifest>
