--- a/dependencies_aaf_config.gradle
+++ b/dependencies_aaf_config.gradle
@@ -31,11 +31,16 @@ ext {
     androidsupport = [
             viewpager          : "androidx.viewpager:viewpager:1.0.0",
             appcompat          : "androidx.appcompat:appcompat:1.5.0",
-            fragment          : "androidx.fragment:fragment:1.3.6",
+            fragment           : "androidx.fragment:fragment:1.3.6",
             androidxcore       : "androidx.core:core:1.8.0",
             constraintlayout   : "androidx.constraintlayout:constraintlayout:2.1.4",
             annotation         : "androidx.annotation:annotation:1.3.0",
             multidex           : "androidx.multidex:multidex:2.0.1",
+
+            camera_core      : "androidx.camera:camera-core:1.1.0",
+            camera_camera2   : "androidx.camera:camera-camera2:1.1.0",
+            camera_camerax   : "androidx.camera:camera-lifecycle:1.1.0",
+            camera_view      : "androidx.camera:camera-view:1.1.0",
 
             recyclerview       : "androidx.recyclerview:recyclerview:1.2.1",
             swiperefreshlayout : "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0",
