--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         maven { url 'https://developer.huawei.com/repo/' }
 
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1821/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1822/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1823/content/" }
 
     }
 
@@ -37,6 +39,8 @@ allprojects {
         maven { url 'https://developer.huawei.com/repo/' }
 
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1821/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1822/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1823/content/" }
     }
 
     afterEvaluate { Project subproject ->
