--- a/LibWidget/src/main/AndroidManifest.xml
+++ b/LibWidget/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.bihe0832.android.lib.widget">
-
+    <!--    Widget-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
+<!--    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />-->
+<!--    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />-->
+<!--    <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />-->
 
 </manifest>
